objects/SVMXC__RMA_Shipment_Line__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__RMA_Shipment_Order__c</fullName>
        <description>RMA/Shipment number. Is a lookup to an existing RMA/Shipment record in ServiceMax</description>
        <inlineHelpText>RMA/Shipment number. Is a lookup to an existing RMA/Shipment record in ServiceMax</inlineHelpText>
        <label>Parts Order</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that received the product</description>
        <label>Received By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_On__c</fullName>
        <description>Date/time when the product was received</description>
        <label>Received On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the product has been received or not</description>
        <label>Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Reconciliation_Action__c</fullName>
        <description>Action performed by the user to reconcile an unexpected product or serial number</description>
        <label>Reconciliation Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Returned_Condition__c</fullName>
        <description>Condition of the product when received (As expected or otherwise)</description>
        <inlineHelpText>Condition of the product when received (As expected or otherwise)</inlineHelpText>
        <label>Returned Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As Expected</fullName>
                </value>
                <value>
                    <fullName>Shipping Damage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Route_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Card</label>
        <referenceTo>SVMXC__Route_Card__c</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>Route_Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Route_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Stop</label>
        <referenceTo>SVMXC__Route_Stop__c</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sales_Order_Number__c</fullName>
        <description>Sales order number for this shipment if available.</description>
        <inlineHelpText>Sales order number for this shipment if available.</inlineHelpText>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to bind checkbox in List of Parts Order Line records on Visualforce page with controller.</description>
        <inlineHelpText>Field to bind checkbox in List of Parts Order Line records on Visualforce page with controller.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number_List__c</fullName>
        <description>List of serial numbers expected/received/shipped separated by a configurable delimiter</description>
        <label>Serial Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the installed product returned/shipped. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>ID of the installed product returned/shipped. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>IB Serial Number</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_End_Date__c</fullName>
        <formula>SVMXC__Serial_Number__r.SVMXC__Service_Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Start_Date__c</fullName>
        <formula>SVMXC__Serial_Number__r.SVMXC__Service_Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service engineer associated with this RMA/shipment order. Is a lookup to an existing salesforce user record</description>
        <inlineHelpText>Name of the service engineer associated with this RMA/shipment order. Is a lookup to an existing salesforce user record</inlineHelpText>
        <label>Service Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ServiceMax service order parts request line for which this shipment line was created.</description>
        <inlineHelpText>The ServiceMax service order parts request line for which this shipment line was created.</inlineHelpText>
        <label>Work Details</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Ship_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The actual site/location where the product was shipped/received. Is a lookup to an existing site record</description>
        <inlineHelpText>The actual site/location where the product was shipped/received. Is a lookup to an existing site record</inlineHelpText>
        <label>Return/Ship Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipped_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that shipped the product</description>
        <label>Shipped By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parts_Order_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipped_On__c</fullName>
        <description>Date/time when the product was shipped</description>
        <label>Shipped On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the product has been shipped or not</description>
        <label>Shipped?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Line_Price2__c</fullName>
        <description>Total Line Price</description>
        <formula>IF( ISPICKVAL( SVMXC__Line_Status__c ,&apos;Completed&apos;), (SVMXC__Actual_Quantity2__c * SVMXC__Line_Price2__c) - ( SVMXC__Discount_Percentage__c * (SVMXC__Actual_Quantity2__c * SVMXC__Line_Price2__c)), IF(ISPICKVAL( SVMXC__Line_Status__c ,&apos;Canceled&apos;), 0,(SVMXC__Expected_Quantity2__c * SVMXC__Line_Price2__c) - ( SVMXC__Discount_Percentage__c * (SVMXC__Expected_Quantity2__c * SVMXC__Line_Price2__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Line Price</inlineHelpText>
        <label>Total Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transaction_Results__c</fullName>
        <description>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</description>
        <inlineHelpText>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</inlineHelpText>
        <label>Transaction Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Use_Price_From_Pricebook__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</description>
        <inlineHelpText>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</inlineHelpText>
        <label>Use Price From Pricebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warehouse__c</fullName>
        <description>Name/number of the warehouse from which the products will be shipped</description>
        <inlineHelpText>Name/number of the warehouse from which the products will be shipped</inlineHelpText>
        <label>Warehouse</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_End_Date__c</fullName>
        <formula>SVMXC__Serial_Number__r.SVMXC__Warranty_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Start_Date__c</fullName>
        <formula>SVMXC__Serial_Number__r.SVMXC__Warranty_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a work order was created upon receipt/delivery</description>
        <label>Work Order Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_Failed_Date__c</fullName>
        <description>Date that the part failed</description>
        <label>Failed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMX_MRB_Disposition_Text__c</fullName>
        <label>MRB Disposition Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_MRB_Disposition__c</fullName>
        <label>MRB Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RTV</fullName>
                </value>
                <value>
                    <fullName>Use As Is</fullName>
                </value>
                <value>
                    <fullName>On-hold</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_Material_Source__c</fullName>
        <description>Source that materials were obtained</description>
        <label>Material Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Return</fullName>
                </value>
                <value>
                    <fullName>Supplier Issue</fullName>
                </value>
                <value>
                    <fullName>Consignment Return</fullName>
                </value>
                <value>
                    <fullName>Cadence MFG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Lot_Number__c</fullName>
        <formula>SVMXC__Serial_Number__r.SVMXC__Serial_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial/Lot Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Notes__c</fullName>
        <formula>SVMXC__RMA_Shipment_Order__r.Shipping_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Level__c</fullName>
        <formula>TEXT(SVMXC__Serial_Number__r.System_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>non_IP_SN_In__c</fullName>
        <description>Non-Installed Product Serial Number In</description>
        <inlineHelpText>Non-Installed Product Serial Number In</inlineHelpText>
        <label>non IP SN In</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>non_IP_SN_Out__c</fullName>
        <description>non-Installed Product Serial Number Out</description>
        <inlineHelpText>non-Installed Product Serial Number Out</inlineHelpText>
        <label>non IP SN Out</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Parts Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LN-{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Order Lines</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__RMA</fullName>
        <active>true</active>
        <label>RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Shipment</fullName>
        <active>true</active>
        <label>Shipment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>